# nit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  util.sh
src/: aabb.rs  bvh.rs  camera.rs  color.rs  config.rs  image.rs  main.rs  math.rs  obj_loader.rs  object.rs  ray.rs  renderer.rs  scene.rs  stl_loader.rs  vector3.rs
src/config/: configs.rs  mod.rs
src/materials/: dielectric.rs  diffuse.rs  light.rs  mod.rs  reflector.rs
src/objects/: block.rs  hittable_list.rs  mod.rs  rectangle.rs  rotate.rs  sphere.rs  translate.rs  triangle.rs
src/primatives/: block.rs  hittable_list.rs  mod.rs  rectangle.rs  rotate.rs  sphere.rs  translate.rs  triangle.rs
src/primitives/: block.rs  hittable_list.rs  mod.rs  rectangle.rs  rotate.rs  sphere.rs  translate.rs  triangle.rs
test/: sotvl_Spiral-Vase.stl
