[package]
name = "nit"
version = "0.1.0"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"
